lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(changes) { return changes; },
        peg$c1 = function(entry) { return entry; },
        peg$c2 = { type: "other", description: "version" },
        peg$c3 = "version:",
        peg$c4 = { type: "literal", value: "version:", description: "\"version:\"" },
        peg$c5 = function(ver) { return parseInt(ver); },
        peg$c6 = function(ver, entries) {
            return { version: ver, type: 'content', entries: entries };
          },
        peg$c7 = { type: "other", description: "entry" },
        peg$c8 = function(dn, attribs) {
            return { dn: dn, attributes: attribs };
          },
        peg$c9 = function(ver, entries) { return { version: ver, type: 'changes', changes: entries }; },
        peg$c10 = function(dn, ctrl, changes) { return { dn: dn, control: ctrl, changes: changes }; },
        peg$c11 = { type: "other", description: "control" },
        peg$c12 = "control:",
        peg$c13 = { type: "literal", value: "control:", description: "\"control:\"" },
        peg$c14 = "true",
        peg$c15 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c16 = "false",
        peg$c17 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c18 = function(oid, crit, val) {
              return {
                controlType: oid,
                criticality: crit || null,
                controlValue: val || null
              };
            },
        peg$c19 = { type: "other", description: "changetype" },
        peg$c20 = "changetype:",
        peg$c21 = { type: "literal", value: "changetype:", description: "\"changetype:\"" },
        peg$c22 = function(change) { return change; },
        peg$c23 = "add",
        peg$c24 = { type: "literal", value: "add", description: "\"add\"" },
        peg$c25 = function(attribs) {
            return {
              type: 'add',
              attributes: attribs
            };
          },
        peg$c26 = "delete",
        peg$c27 = { type: "literal", value: "delete", description: "\"delete\"" },
        peg$c28 = function() { return { type: 'delete' }; },
        peg$c29 = "modrdn",
        peg$c30 = { type: "literal", value: "modrdn", description: "\"modrdn\"" },
        peg$c31 = "moddn",
        peg$c32 = { type: "literal", value: "moddn", description: "\"moddn\"" },
        peg$c33 = "newrdn:",
        peg$c34 = { type: "literal", value: "newrdn:", description: "\"newrdn:\"" },
        peg$c35 = "deleteoldrdn:",
        peg$c36 = { type: "literal", value: "deleteoldrdn:", description: "\"deleteoldrdn:\"" },
        peg$c37 = "0",
        peg$c38 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c39 = "1",
        peg$c40 = { type: "literal", value: "1", description: "\"1\"" },
        peg$c41 = function(type, newrdn, delold, newsup) {
              return {
                type: type,
                newrdn: newrdn,
                deleteoldrdn: delold,
                newsuperior: newsup || null
              };
            },
        peg$c42 = "newsuperior::",
        peg$c43 = { type: "literal", value: "newsuperior::", description: "\"newsuperior::\"" },
        peg$c44 = function(dn) { return dn; },
        peg$c45 = "newsuperior:",
        peg$c46 = { type: "literal", value: "newsuperior:", description: "\"newsuperior:\"" },
        peg$c47 = "modify",
        peg$c48 = { type: "literal", value: "modify", description: "\"modify\"" },
        peg$c49 = function(mods) {
            return { type: 'modify', changes: mods };
          },
        peg$c50 = "replace",
        peg$c51 = { type: "literal", value: "replace", description: "\"replace\"" },
        peg$c52 = ":",
        peg$c53 = { type: "literal", value: ":", description: "\":\"" },
        peg$c54 = "-",
        peg$c55 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c56 = function(type, attr, values) {
              values = _pluck(values,'value');
              return { type: type, attribute: attr, values: values };
            },
        peg$c57 = { type: "other", description: "DN" },
        peg$c58 = "dn:",
        peg$c59 = { type: "literal", value: "dn:", description: "\"dn:\"" },
        peg$c60 = "dn::",
        peg$c61 = { type: "literal", value: "dn::", description: "\"dn::\"" },
        peg$c62 = function(dn) { return base64_decode(dn); },
        peg$c63 = { type: "other", description: "distinguishedName" },
        peg$c64 = { type: "other", description: "base64dn" },
        peg$c65 = { type: "other", description: "attribute list" },
        peg$c66 = function(attr) { return attr; },
        peg$c67 = { type: "other", description: "attribute value line" },
        peg$c68 = "::",
        peg$c69 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c70 = function(attr, val) {
            return { attribute: attr, value: { type: 'base64', value: val } };
          },
        peg$c71 = ":<",
        peg$c72 = { type: "literal", value: ":<", description: "\":<\"" },
        peg$c73 = function(attr, val) {
            return { attribute: attr, value: { type: 'file', value: val } };
          },
        peg$c74 = function(attr, val) {
            return { attribute: attr, value: { type: 'value', value: val } };
          },
        peg$c75 = function(attr) {
            return { attribute: attr, value: null };
          },
        peg$c76 = { type: "other", description: "attribute description" },
        peg$c77 = ";",
        peg$c78 = { type: "literal", value: ";", description: "\";\"" },
        peg$c79 = function(attr, opts) {
            if (opts) {
              opts.shift();
              opts = opts.shift();
              opts = opts.split(';');
            }
            attr.options = opts || [];
            return attr;
          },
        peg$c80 = { type: "other", description: "attribute Type" },
        peg$c81 = function(oid) {
            return {
              type: 'oid',
              oid: oid
            };
          },
        peg$c82 = function(name) {
            return {
              type: 'attribute',
              attribute: name
            };
          },
        peg$c83 = { type: "other", description: "attribute type chars" },
        peg$c84 = { type: "other", description: "OID" },
        peg$c85 = ".",
        peg$c86 = { type: "literal", value: ".", description: "\".\"" },
        peg$c87 = { type: "other", description: "attribute options" },
        peg$c88 = { type: "other", description: "attribute option" },
        peg$c89 = { type: "other", description: "attribute value" },
        peg$c90 = function(left, right) { return left + right; },
        peg$c91 = { type: "other", description: "continuation" },
        peg$c92 = { type: "other", description: "base64-encoded value" },
        peg$c93 = { type: "other", description: "WHITESPACE" },
        peg$c94 = /^[s]/,
        peg$c95 = { type: "class", value: "[\\s]", description: "[\\s]" },
        peg$c96 = { type: "other", description: "COMMENT" },
        peg$c97 = "#",
        peg$c98 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c99 = { type: "any", description: "any character" },
        peg$c100 = { type: "other", description: "FILL" },
        peg$c101 = { type: "other", description: "SPACE" },
        peg$c102 = /^[ ]/,
        peg$c103 = { type: "class", value: "[\\x20]", description: "[\\x20]" },
        peg$c104 = { type: "other", description: "DIGIT" },
        peg$c105 = /^[0-9]/,
        peg$c106 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c107 = { type: "other", description: "ALPHA" },
        peg$c108 = /^[a-zA-Z]/,
        peg$c109 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c110 = { type: "other", description: "BASE64 STRING" },
        peg$c111 = { type: "other", description: "BASE64 CHAR" },
        peg$c112 = /^[+\/0-9=A-Za-z]/,
        peg$c113 = { type: "class", value: "[\\x2B\\x2F\\x30-\\x39\\x3D\\x41-\\x5A\\x61-\\x7A]", description: "[\\x2B\\x2F\\x30-\\x39\\x3D\\x41-\\x5A\\x61-\\x7A]" },
        peg$c114 = { type: "other", description: "SAFE STRING" },
        peg$c115 = { type: "other", description: "SAFE INITIALIZER" },
        peg$c116 = /^[\x01-\t\x0B-\f\x0E-\x1F!-9;=-]/,
        peg$c117 = { type: "class", value: "[\\x01-\\x09\\x0B-\\x0C\\x0E-\\x1F\\x21-\\x39\\x3B\\x3D-\\x7F]", description: "[\\x01-\\x09\\x0B-\\x0C\\x0E-\\x1F\\x21-\\x39\\x3B\\x3D-\\x7F]" },
        peg$c118 = { type: "other", description: "SAFE CHAR" },
        peg$c119 = /^[\x01-\t\x0B-\f\x0E-]/,
        peg$c120 = { type: "class", value: "[\\x01-\\x09\\x0B-\\x0C\\x0E-\\x7F]", description: "[\\x01-\\x09\\x0B-\\x0C\\x0E-\\x7F]" },
        peg$c121 = { type: "other", description: "NEWLINE" },
        peg$c122 = "\r\n",
        peg$c123 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c124 = "\n",
        peg$c125 = { type: "literal", value: "\n", description: "\"\\n\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseldif_schema();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseldif_schema() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseldif_changes();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseldif_content();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseversion_number() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseDIGIT();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseDIGIT();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      return s0;
    }

    function peg$parseversion_spec() {
      var s0, s1, s2, s3, s4;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseFILL();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseversion_number();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSEP();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parseldif_content() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsewhitespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsewhitespace();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseversion_spec();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseldif_entry();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseldif_entry();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseldif_entry() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsedn_spec();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSEP();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseattrs_spec();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsewhitespace();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsewhitespace();
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c8(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }

      return s0;
    }

    function peg$parseldif_changes() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsewhitespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsewhitespace();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseversion_spec();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseldif_change();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseldif_change();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseldif_change() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsewhitespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsewhitespace();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsedn_spec();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSEP();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsecomment_line();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsecomment_line();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsecontrol_spec();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsechange_record();
                if (s6 !== peg$FAILED) {
                  s7 = [];
                  s8 = peg$parsewhitespace();
                  while (s8 !== peg$FAILED) {
                    s7.push(s8);
                    s8 = peg$parsewhitespace();
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c10(s2, s5, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecontrol_spec() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c12) {
        s1 = peg$c12;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseFILL();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLDAP_OID();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseSPACE();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseSPACE();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$currPos;
              if (input.substr(peg$currPos, 4) === peg$c14) {
                s6 = peg$c14;
                peg$currPos += 4;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s6 === peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c16) {
                  s6 = peg$c16;
                  peg$currPos += 5;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c17); }
                }
              }
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s5 = input.substring(s5, peg$currPos);
              } else {
                s5 = s6;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parseSPACE();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parseSPACE();
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$currPos;
                  s8 = peg$parseSAFE_STRING();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    s7 = input.substring(s7, peg$currPos);
                  } else {
                    s7 = s8;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseSEP();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c18(s3, s5, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }

      return s0;
    }

    function peg$parsechange_record() {
      var s0, s1, s2, s3, s4;
